fixed alignment and large spacer  at the bottom of the page

--- a/src/apps/seo/src/app/app.less
+++ b/src/apps/seo/src/app/app.less
@@ -33,7 +33,7 @@
   }
 
   .wrapper {
-    height: ~"calc(100vh - 73px - 55px)";
+    height: calc(100vh - 73px - 5px);
     overflow: scroll;
     padding: 0;
     background: @zesty-field-blue;
