--- a/src/apps/seo/src/views/RedirectsManager/RedirectActions/RedirectActions.less
+++ b/src/apps/seo/src/views/RedirectsManager/RedirectActions/RedirectActions.less
@@ -14,11 +14,14 @@
     padding: 0;
     color: @zesty-tab-blue;
     font-family: "Gibson";
+    font-size: 24px;
   }
   .actions {
     flex-basis: 40rem;
     display: flex;
     position: relative;
+    justify-content: flex-end;
+
     .addRedirects {
       flex: 1;
     }
