--- a/src/apps/seo/src/views/RedirectsManager/RedirectActions/RedirectFilter/RedirectFilter.less
+++ b/src/apps/seo/src/views/RedirectsManager/RedirectActions/RedirectFilter/RedirectFilter.less
@@ -1,4 +1,7 @@
 .filter {
+  margin: 0 8px 0 0;
   flex: 1;
-  margin-right: 1rem;
+  input {
+    flex: 1;
+  }
 }
